--- a/homme.html
+++ b/homme.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
         <link rel="stylesheet" href="asset/css/style.css">
@@ -16,33 +15,22 @@
 <body>
 
 <div class="container">
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src=".../800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src=".../800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
-    </div>
+    <div class="row">
+        <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src=".../100px180/" alt="short Long Surf">
+        <div class="card-body">
+        <h5 class="card-title">SHORT LONG SURF</h5>
+        <p class="card-text">Le nouveau Short Long Surf AfpaFouille est ce qui se fait de mieux en termes de confort.</p>
+        <a href="#" class="btn btn-primary">Détails</a>
+        <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src=".../100px180/" alt="short Long Surf">
+        <div class="card-body">
+        <h5 class="card-title">SHORT LONG SURF</h5>
+        <p class="card-text">Le nouveau Short Long Surf AfpaFouille est ce qui se fait de mieux en termes de confort.</p>
+        <a href="#" class="btn btn-primary">Détails</a>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
-    
+    </div>
 </div>
 
 
