--- a/inscription.html
+++ b/inscription.html
@@ -7,13 +7,145 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-        <link rel="stylesheet" href="asset/css/style.css">
+    <link rel="stylesheet" href="asset/css/inscription.css">
+    <link rel="stylesheet" href="asset/css/style.css">
     <title>Projet Ecommerce | L'AfpaFouille</title>
 </head>
 
 <body>
+    <!-- ------------------------NAVBAR-------------------------------- -->
+    <nav class="navbar ">
+        <a class="navbar-brand" href="#">
+            <img src="asset/img/afpa_logo.png" width="250" height="60" class="d-inline-block align-top" alt="">
+        </a>
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link active" data-toggle="modal" data-target="#exampleModalCenter">LOGIN</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">PANIER</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">CONTACT</a>
+            </li>
+        </ul>
+    </nav>
 
-<a href="index.html">Retour</a>
+    <!-- ------------------------Formulaire Inscription-------------------------------- -->
+    <div class="container" id="titreins">
+        <div class="row">
+            <div class="col-xs-12 col-md-12">
+                <h3><i>Renseigner vos données personnelles</i></h3>
+            </div>
+        </div>
+    </div>
+    <div class="container" id="FormIns">
+        <form>
+            <div class="row">
+                <div class="col-xs-4 col-md-4">
+                    <div class="form-group">
+                        <label for="exampleFormControlSelect1">Civilité</label>
+                        <select class="form-control" id="civ">
+                            <option>Madame</option>
+                            <option>Monsieur</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-xs-4 col-md-4">
+                    <div class="form-group">
+                        <label for="formGroupExampleInput">Nom</label>
+                        <input type="text" class="form-control" id="nom" placeholder="Entrer votre nom">
+                    </div>
+                </div>
+                <div class="col-xs-4 col-md-4">
+                    <div class="form-group">
+                        <label for="formGroupExampleInput2">Prénom</label>
+                        <input type="text" class="form-control" id="prenom" placeholder="Entrer votre prénom">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-4 col-md-4">
+                    <div class="form-group">
+                        <label for="formGroupExampleInput2">Email</label>
+                        <input type="text" class="form-control" id="email" placeholder="Entrer votre email">
+                    </div>
+                </div>
+                <div class="col-xs-4 col-md-4">
+                    <div class="form-group">
+                        <label for="formGroupExampleInput">Mot de passe</label>
+                        <input type="password" class="form-control" id="mdp" placeholder="Entrer votre mot de passe">
+                    </div>
+                </div>
+                <div class="col-xs-4 col-md-4">
+                    <div class="form-group">
+                        <label for="formGroupExampleInput">Confirmation du mot de passe</label>
+                        <input type="password" class="form-control" id="mdpconf" placeholder="Confirmation">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-6 col-md-6">
+                    <div class="form-group">
+                        <label for="formGroupExampleInput2">Numéro de rue</label>
+                        <input type="text" class="form-control" id="numrue" placeholder="Numéro de votre rue">
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-6">
+                    <div class="form-group">
+                        <label for="formGroupExampleInput">Nom de rue</label>
+                        <input type="text" class="form-control" id="nomrue" placeholder="Nom de votre rue">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-6 col-md-6">
+                    <div class="form-group">
+                        <label for="formGroupExampleInput2">Code Postal</label>
+                        <input type="text" class="form-control" id="cp" placeholder="Votre code postal">
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-6">
+                    <div class="form-group">
+                        <label for="formGroupExampleInput">Ville</label>
+                        <input type="text" class="form-control" id="ville" placeholder="Nom de votre ville">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-6 col-md-6">
+                    <div class="form-group">
+                        <label for="formGroupExampleInput2">Tél domicile</label>
+                        <input type="text" class="form-control" id="teld" placeholder="Votre téléphone fixe">
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-6">
+                    <div class="form-group">
+                        <label for="formGroupExampleInput">Tél portable</label>
+                        <input type="text" class="form-control" id="telp" placeholder="Votre téléphone portable">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-8 col-md-8">
+                    <div class="form-group">
+                        <label for="exampleFormControlSelect1">Comment avez vous connu notre marque ?</label>
+                        <select class="form-control" id="connu">
+                            <option>Site Web</option>
+                            <option>Un ami</option>
+                            <option>Pages Jaunes</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-xs-4 col-md-4">
+                    <div class="form-group">
+                        <button type="button" class="btn btn-primary btn-lg btn-block" id="envins" onclick="ouvind()">Envoyer</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
