--- a/homme.html
+++ b/homme.html
@@ -9,39 +9,85 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
         <link rel="stylesheet" href="asset/css/stylehomme.css">
+        <link rel="stylesheet" href="asset/css/style.css">
     <title>Projet Ecommerce | L'AfpaFouille</title>
 </head>
 
 <body>
+     <!-- ------------------------NAVBAR-------------------------------- -->
+    <nav class="navbar ">
+        <a class="navbar-brand" href="#">
+            <img src="asset/img/afpa_logo.png" width="250" height="60" class="d-inline-block align-top" alt="">
+        </a>
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">LOGIN</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">PANIER</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">CONTACT</a>
+            </li>
+        </ul>
+    </nav>
+    <!-- -------------------CARROUSSEL-------------------------------------- -->
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="asset/img/slide1.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src=".../800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>    
 
 <!-- Les Cards Articles -->
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <!-- Card  Button Homme Femme Enfant - Taille - Couleur -->
-        <div class="card col-md-3 col-sm-3 mr-2">
+        <div class="card font-weight-bold col-md-2 col-sm-2 m-2">
             <div class="card-body">
                 <ul class=" list-unstyled border-0 list-inline">
-                    <li class="list-inline-item btn btn-light p-2 m-2">HOMME</li> 
-                    <li class="list-inline-item btn btn-light p-2 m-2">FEMME</li>
-                    <li class="btn btn-light p-2 m-2">ENFANT</li>
+                    <li class="list-inline-item btn btn-secondary btn-md active p-2 m-2">HOMME</li> 
+                    <li class="list-inline-item btn btn-secondary btn-md p-2 m-2">FEMME</li>
+                    <li class="btn btn-secondary btn-md p-2 m-2">ENFANT</li>
                 </ul>
-                <p class="p-2 m-2 font-weight-bold">TAILLE</p>
+                <h6 class="p-2 m-2 font-weight-bold">TAILLES</h6>
                 <ul class=" list-unstyled border-0 list-inline">
-                    <li class="list-inline-item btn btn-light p-2 m-2">XS</li> 
-                    <li class="list-inline-item btn btn-light p-2 m-2">SMALL</li>
-                    <li class="btn btn-light p-2 m-2">MEDIUM</li>
-                    <li class="list-inline-item btn btn-light p-2 m-2">LARGE</li>
-                    <li class="btn btn-light p-2 m-2">X-LARGE</li>
-                    <li class="list-inline-item btn btn-light p-2 m-2">XX-LARGE</li>
+                    <li class="list-inline-item btn btn-secondary btn-md p-2 m-2">X-SMALL</li> 
+                    <li class="list-inline-item btn btn-secondary btn-md p-2 m-2">SMALL</li>
+                    <li class="btn btn-secondary btn-md p-2 m-2">MEDIUM</li>
+                    <li class="list-inline-item btn btn-secondary btn-md p-2 m-2">LARGE</li>
+                    <li class="btn btn-secondary btn-md p-2 m-2">X-LARGE</li>
+                    <li class="btn btn-secondary btn-md p-2 m-2">XX-LARGE</li>
                 </ul>
-                <p class="p-2 m-2 font-weight-bold">COULEUR</p>
-                <ul class="list-unstyled list-inline">
+                <h6 class="p-2 m-2 font-weight-bold">COULEURS</h6>
+                <ul class="list-unstyled list-inline p-2 m-2">
                     <li class="list-inline-item couleurrouge"></li> 
                     <li class="list-inline-item couleurvert"></li>
                     <li class="list-inline-item couleurjaune"></li> 
                     <li class="list-inline-item couleurnoir"></li>
                 </ul>
-                 <ul class="list-unstyled list-inline">
+                 <ul class="list-unstyled list-inline p-2 m-2">
                     <li class="list-inline-item couleurorange"></li> 
                     <li class="list-inline-item couleurbleu"></li>
                     <li class="list-inline-item couleurviolet"></li> 
@@ -50,41 +96,49 @@
             </div>
         </div>
         <!-- Card Short -->
-        <div class="card col-md-2 col-sm-2  mx-1">
-            <img class="card-img-top" src="asset/src/short.png" alt="Short Long Surf">
+        <div class="card col-md-2 col-sm-2  m-2">
+            <img class="card-img-top mt-3" src="asset/src/short.png" alt="Short Long Surf">
             <div class="card-body">
                 <h5 class="card-title font-weight-bold text-center">SHORT LONG SURF</h5>
-                <p class="card-text">Le nouveau Short Long Surf AfpaFouille est ce qui se fait de mieux en termes de confort.</p>
+                <p class="card-text"><small>Le nouveau Short Long Surf AfpaFouille est ce qui se fait de mieux en termes de confort.</small></p>
                 <p class="card-text font-weight-bold">45,00€</p>
                 <a href="#"><button type="button" class="btn_article">Détails</button></a>
+                <div class=" text-center border_titre_tailles cacher">Tailles
+                    <ul class="list-unstyled list-inline border_tailles p-2 m-2 ">
+                        <li class="list-inline-item "><button type="button" class="btn btn-secondary btn-sm">38</button></li>
+                        <li class="list-inline-item "><button type="button" class="btn btn-secondary btn-sm">40</button></li>
+                        <li class="list-inline-item "><button type="button" class="btn btn-secondary btn-sm">42</button></li>
+                        <li class="list-inline-item "><button type="button" class="btn btn-secondary btn-sm">44</button></li> 
+                    </ul> 
+                </div>
             </div>
         </div>
         <!-- Card Tee Shirt -->
-        <div class="card col-md-2 col-sm-2 border border-primary border-5 mx-1" >
-        <img class="card-img-top" src="asset/src/tee-shirt.png" alt="tee-shirt Hossegor">
+        <div class="card col-md-2 col-sm-2   border-5 m-2" >
+        <img class="card-img-top mt-3" src="asset/src/tee-shirt.png" alt="tee-shirt Hossegor">
             <div class="card-body">
             <h5 class="card-title font-weight-bold text-center">TEE SHIRT HOSSEGOR</h5>
-            <p class="card-text">Le nouveau Tee-shirt Hossegor. La Capitale du Surf.</p>
+            <p class="card-text"><small>Le nouveau Tee-shirt Hossegor. La Capitale du Surf.</small></p>
             <p class="card-text font-weight-bold">25,00€</p>
             <a href="#"><button type="button" class="btn_article">Détails</button></a>
             </div>
         </div>
         <!-- Card Casquette -->
-         <div class="card col-md-2 col-sm-2  border border-primary border-5 mx-1" >
-        <img class="card-img-top" src="asset/src/casquette.png" alt="Casquette Surf">
+         <div class="card col-md-2 col-sm-2  border-5 m-2" >
+        <img class="card-img-top mt-3" src="asset/src/casquette.png" alt="Casquette Surf">
             <div class="card-body">
             <h5 class="card-title font-weight-bold text-center">CASQUETTE SURF</h5>
-            <p class="card-text"> Casquette AfpaFouille Blanc/ Bleu .</p>
+            <p class="card-text"><small> Casquette AfpaFouille Blanc/ Bleu.</small></p>
             <p class="card-text font-weight-bold">15,00€</p>
             <a href="#"><button type="button" class="btn_article">Détails</button></a>
             </div>
         </div>
         <!-- Card Veste -->
-         <div class="card col-md-2 col-sm-2 border border-primary border-5 mx-1" >
-        <img class="card-img-top" src="asset/src/veste.png" alt="Veste Surf">
+         <div class="card col-md-2 col-sm-2   border-5 m-2" >
+        <img class="card-img-top mt-3" src="asset/src/veste.png" alt="Veste Surf">
             <div class="card-body">
             <h5 class="card-title font-weight-bold text-center">VESTE SURF</h5>
-            <p class="card-text">La nouvelle Veste Surf AfpaFouile respirante, imperméable et extrêmement résistante.</p>
+            <p class="card-text"><small>La nouvelle Veste Surf AfpaFouile respirante, imperméable et extrêmement résistante.</small></p>
             <p class="card-text font-weight-bold">75,00€</p>
             <a href="#"><button type="button" class="btn_article">Détails</button></a>
             </div>
