recupe css && home.html

--- a/homme.html
+++ b/homme.html
@@ -103,7 +103,7 @@
                 <p class="card-text"><small>Le nouveau Short Long Surf AfpaFouille est ce qui se fait de mieux en termes de confort.</small></p>
                 <p class="card-text font-weight-bold">45,00€</p>
                 <a href="#"><button type="button" class="btn_article">Détails</button></a>
-                <div class=" text-center border_titre_tailles cacher">Tailles
+                <div class=" text-center border_titre_tailles">Tailles
                     <ul class="list-unstyled list-inline border_tailles p-2 m-2 ">
                         <li class="list-inline-item "><button type="button" class="btn btn-secondary btn-sm">38</button></li>
                         <li class="list-inline-item "><button type="button" class="btn btn-secondary btn-sm">40</button></li>
