--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <div class="form-group">
                             <label for="exampleInputPassword1">Mot de passe</label>
                             <input type="password" class="form-control" id="mdp" placeholder="Entrer votre mot de passe">
-                            <a href="#"><small id="pertemdp" class="form-text text-muted"><i>Mot de passe oublié ?</i></small></a>
+                            <a href="./oublimdp.html"><small id="pertemdp" class="form-text text-muted" ><i>Mot de passe oublié ?</i></small></a>
                         </div>
                         <div class="form-check">
                             <input type="checkbox" class="form-check-input" id="souv">
