modification button homme.html

--- a/homme.html
+++ b/homme.html
@@ -62,85 +62,123 @@
 
 <!-- Les Cards Articles -->
 <div class="container-fluid">
-    <div class="row">
+   <div class="container"> 
+        <div class="row">
         <!-- Card  Button Homme Femme Enfant - Taille - Couleur -->
-        <div class="card font-weight-bold col-md-2 col-sm-2 m-2">
-            <div class="card-body">
-                <ul class=" list-unstyled border-0 list-inline">
-                    <li class="list-inline-item btn btn-secondary btn-md active p-2 m-2">HOMME</li> 
-                    <li class="list-inline-item btn btn-secondary btn-md p-2 m-2">FEMME</li>
-                    <li class="btn btn-secondary btn-md p-2 m-2">ENFANT</li>
-                </ul>
-                <h6 class="p-2 m-2 font-weight-bold">TAILLES</h6>
-                <ul class=" list-unstyled border-0 list-inline">
-                    <li class="list-inline-item btn btn-secondary btn-md p-2 m-2">X-SMALL</li> 
-                    <li class="list-inline-item btn btn-secondary btn-md p-2 m-2">SMALL</li>
-                    <li class="btn btn-secondary btn-md p-2 m-2">MEDIUM</li>
-                    <li class="list-inline-item btn btn-secondary btn-md p-2 m-2">LARGE</li>
-                    <li class="btn btn-secondary btn-md p-2 m-2">X-LARGE</li>
-                    <li class="btn btn-secondary btn-md p-2 m-2">XX-LARGE</li>
-                </ul>
-                <h6 class="p-2 m-2 font-weight-bold">COULEURS</h6>
-                <ul class="list-unstyled list-inline p-2 m-2">
-                    <li class="list-inline-item couleurrouge"></li> 
-                    <li class="list-inline-item couleurvert"></li>
-                    <li class="list-inline-item couleurjaune"></li> 
-                    <li class="list-inline-item couleurnoir"></li>
-                </ul>
-                 <ul class="list-unstyled list-inline p-2 m-2">
-                    <li class="list-inline-item couleurorange"></li> 
-                    <li class="list-inline-item couleurbleu"></li>
-                    <li class="list-inline-item couleurviolet"></li> 
-                    <li class="list-inline-item couleurblanc"></li>
-                </ul>
-            </div>
-        </div>
-        <!-- Card Short -->
-        <div class="card col-md-2 col-sm-2  m-2">
-            <img class="card-img-top mt-3" src="asset/src/short.png" alt="Short Long Surf">
-            <div class="card-body">
-                <h5 class="card-title font-weight-bold text-center">SHORT LONG SURF</h5>
-                <p class="card-text"><small>Le nouveau Short Long Surf AfpaFouille est ce qui se fait de mieux en termes de confort.</small></p>
-                <p class="card-text font-weight-bold">45,00€</p>
-                <a href="#"><button type="button" class="btn_article">Détails</button></a>
-                <div class=" text-center border_titre_tailles">Tailles
-                    <ul class="list-unstyled list-inline border_tailles p-2 m-2 ">
-                        <li class="list-inline-item "><button type="button" class="btn btn-secondary btn-sm">38</button></li>
-                        <li class="list-inline-item "><button type="button" class="btn btn-secondary btn-sm">40</button></li>
-                        <li class="list-inline-item "><button type="button" class="btn btn-secondary btn-sm">42</button></li>
-                        <li class="list-inline-item "><button type="button" class="btn btn-secondary btn-sm">44</button></li> 
-                    </ul> 
+            <div class="card  font-weight-bold col-md-3 col-sm-3 m-4">
+                <div class="card-body">
+                    <ul class=" list-unstyled border-0 list-inline">
+                        <li class="list-inline-item btn btn-secondary btn-md active p-2 m-2">HOMME</li> 
+                        <li class="list-inline-item btn btn-secondary btn-md p-2 m-2">FEMME</li>
+                        <li class="btn btn-secondary btn-md p-2 m-2">ENFANT</li>
+                    </ul>
+                    <h6 class="p-2 m-2 font-weight-bold">TAILLES</h6>
+                    <ul class=" list-unstyled border-0 list-inline">
+                        <li class="list-inline-item btn btn-secondary btn-md p-2 m-2">X-SMALL</li> 
+                        <li class="list-inline-item btn btn-secondary btn-md p-2 m-2">SMALL</li>
+                        <li class="btn btn-secondary btn-md p-2 m-2">MEDIUM</li>
+                        <li class="list-inline-item btn btn-secondary btn-md p-2 m-2">LARGE</li>
+                        <li class="btn btn-secondary btn-md p-2 m-2">X-LARGE</li>
+                        <li class="btn btn-secondary btn-md p-2 m-2">XX-LARGE</li>
+                    </ul>
+                    <h6 class="p-2 m-2 font-weight-bold">COULEURS</h6>
+                    <div class="row">
+                    <ul class="list-unstyled list-inline p-2 m-2">
+                        <li class="list-inline-item couleurrouge"></li> 
+                        <li class="list-inline-item couleurvert"></li>
+                        <li class="list-inline-item couleurjaune"></li> 
+                        <li class="list-inline-item couleurnoir"></li>
+                    </ul>
+                    </div>
+                    <div class="row">
+                     <ul class="list-unstyled list-inline p-2 m-2">
+                        <li class="list-inline-item couleurorange"></li> 
+                        <li class="list-inline-item couleurbleu"></li>
+                        <li class="list-inline-item couleurviolet"></li> 
+                        <li class="list-inline-item couleurblanc"></li>
+                    </ul>
+                </div>
                 </div>
             </div>
-        </div>
-        <!-- Card Tee Shirt -->
-        <div class="card col-md-2 col-sm-2   border-5 m-2" >
-        <img class="card-img-top mt-3" src="asset/src/tee-shirt.png" alt="tee-shirt Hossegor">
-            <div class="card-body">
-            <h5 class="card-title font-weight-bold text-center">TEE SHIRT HOSSEGOR</h5>
-            <p class="card-text"><small>Le nouveau Tee-shirt Hossegor. La Capitale du Surf.</small></p>
-            <p class="card-text font-weight-bold">25,00€</p>
-            <a href="#"><button type="button" class="btn_article">Détails</button></a>
+            <!-- Card Short -->
+            <div class="card  action_card col-md-2 col-sm-2 mr-1">
+                <img class="card-img-top mt-3" src="asset/src/short.png" alt="Short Long Surf">
+                <div class="card-body">
+                    <h5 class="card-title font-weight-bold text-center">SHORT LONG SURF</h5>
+                    <p class="card-text"><small>Le nouveau Short Long Surf AfpaFouille est ce qui se fait de mieux en termes de confort.</small></p>
+                    <p class="card-text font-weight-bold">45,00€</p>
+                    <a href="#"><button type="button" class="btn_article">Détails</button></a>
+                    <div class=" text-center border_titre_tailles">Tailles
+                        <div class="row">
+                        <ul class="list-unstyled list-inline border_tailles">
+                            <li class="list-inline-item "><button type="button" class="btn-sm">38</button></li>
+                            <li class="list-inline-item "><button type="button" class="btn-sm">40</button></li>
+                            <li class="list-inline-item "><button type="button" class="btn-sm">42</button></li>
+                            <li class="list-inline-item "><button type="button" class="btn-sm">44</button></li> 
+                        </ul>
+                        </div> 
+                    </div>
+                </div>
             </div>
-        </div>
-        <!-- Card Casquette -->
-         <div class="card col-md-2 col-sm-2  border-5 m-2" >
-        <img class="card-img-top mt-3" src="asset/src/casquette.png" alt="Casquette Surf">
-            <div class="card-body">
-            <h5 class="card-title font-weight-bold text-center">CASQUETTE SURF</h5>
-            <p class="card-text"><small> Casquette AfpaFouille Blanc/ Bleu.</small></p>
-            <p class="card-text font-weight-bold">15,00€</p>
-            <a href="#"><button type="button" class="btn_article">Détails</button></a>
+            <!-- Card Tee Shirt -->
+            <div class="card action_card col-md-2 col-sm-2 mr-1" >
+            <img class="card-img-top mt-3" src="asset/src/tee-shirt.png" alt="tee-shirt Hossegor">
+                <div class="card-body">
+                <h5 class="card-title font-weight-bold text-center">TEE SHIRT HOSSEGOR</h5>
+                <p class="card-text"><small>Le nouveau Tee-shirt Hossegor. La Capitale du Surf.</small></p>
+                <p class="card-text font-weight-bold">25,00€</p>
+                <a href="#"><button type="button" class="btn_article">Détails</button></a>
+                <div class=" text-center border_titre_tailles">Tailles
+                    <div class="row">
+                        <ul class="list-unstyled list-inline border_tailles">
+                            <li class="list-inline-item "><button type="button" class="btn-sm">38</button></li>
+                            <li class="list-inline-item "><button type="button" class="btn-sm">40</button></li>
+                            <li class="list-inline-item "><button type="button" class="btn-sm">42</button></li>
+                            <li class="list-inline-item "><button type="button" class="btn-sm">44</button></li> 
+                        </ul>
+                     </div>  
+                    </div>
+                </div>
             </div>
-        </div>
-        <!-- Card Veste -->
-         <div class="card col-md-2 col-sm-2   border-5 m-2" >
-        <img class="card-img-top mt-3" src="asset/src/veste.png" alt="Veste Surf">
-            <div class="card-body">
-            <h5 class="card-title font-weight-bold text-center">VESTE SURF</h5>
-            <p class="card-text"><small>La nouvelle Veste Surf AfpaFouile respirante, imperméable et extrêmement résistante.</small></p>
-            <p class="card-text font-weight-bold">75,00€</p>
-            <a href="#"><button type="button" class="btn_article">Détails</button></a>
+            <!-- Card Casquette -->
+             <div class="card action_card col-md-2 col-sm-2 mr-1" >
+            <img class="card-img-top mt-3" src="asset/src/casquette.png" alt="Casquette Surf">
+                <div class="card-body">
+                <h5 class="card-title font-weight-bold text-center">CASQUETTE SURF</h5>
+                <p class="card-text"><small> Casquette AfpaFouille Blanc/ Bleu.</small></p>
+                <p class="card-text font-weight-bold">15,00€</p>
+                <a href="#"><button type="button" class="btn_article">Détails</button></a>
+                <div class=" text-center border_titre_tailles">Tailles
+                    <div class="row"> 
+                        <ul class="list-unstyled list-inline border_tailles">
+                            <li class="list-inline-item "><button type="button" class="btn-sm">38</button></li>
+                            <li class="list-inline-item "><button type="button" class="btn-sm">40</button></li>
+                            <li class="list-inline-item "><button type="button" class="btn-sm">42</button></li>
+                            <li class="list-inline-item "><button type="button" class="btn-sm">44</button></li> 
+                        </ul>
+                    </div> 
+                    </div>
+                </div>
+            </div>
+            <!-- Card Veste -->
+             <div class="card action_card col-md-2 col-sm-2 mr-1" >
+            <img class="card-img-top mt-3" src="asset/src/veste.png" alt="Veste Surf">
+                <div class="card-body">
+                <h5 class="card-title font-weight-bold text-center">VESTE SURF</h5>
+                <p class="card-text"><small>La nouvelle Veste Surf AfpaFouile respirante, imperméable et extrêmement résistante.</small></p>
+                <p class="card-text font-weight-bold">75,00€</p>
+                <a href="#"><button type="button" class="btn_article">Détails</button></a>
+                <div class=" text-center border_titre_tailles">Tailles
+                    <div class="row">
+                        <ul class="list-unstyled list-inline border_tailles">
+                            <li class="list-inline-item "><button type="button" class="btn-sm">38</button></li>
+                            <li class="list-inline-item "><button type="button" class="btn-sm">40</button></li>
+                            <li class="list-inline-item "><button type="button" class="btn-sm">42</button></li>
+                            <li class="list-inline-item "><button type="button" class="btn-sm">44</button></li> 
+                        </ul>
+                        </div> 
+                    </div>
+                </div>
             </div>
         </div>
     </div>
