--- a/inscription.html
+++ b/inscription.html
@@ -15,7 +15,7 @@
 <body>
     <!-- ------------------------NAVBAR-------------------------------- -->
     <nav class="navbar ">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="asset/img/afpa_logo.png" width="250" height="60" class="d-inline-block align-top" alt="">
         </a>
         <ul class="nav justify-content-end">
@@ -145,6 +145,7 @@
             </div>
         </form>
     </div>
+    
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
