--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <!-- ------------------------NAVBAR-------------------------------- -->
     <nav class="navbar ">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="asset/img/afpa_logo.png" width="250" height="60" class="d-inline-block align-top" alt="">
         </a>
         <ul class="nav justify-content-end">
@@ -139,8 +139,25 @@
                 </div>
 
             </div>
+
+            <div class="row">
+                <div class="col-md-6 col-sm12 p-0 mt-1" class="col-vitrine" style="background:white;">
+                     <img class="card-img-top mt-3 pr-2 pl-2" src="asset/img/images.jpg" alt="Card image cap">  .
+                    <!-- <img src="asset/img/images.jpg" class="vitrine"alt=""> -->
+                </div>
+                <div class="col-md-3 col-sm-6 mt-1 ml-1" style="background:white;">
+                        <img class="card-img-top mt-3" src="asset/img/casquette.png" alt="Card image cap">
+                        <div class="price">
+                            <span><h3>100€</h3></span>
+                        </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+
+                </div>
+            </div>
         </div>
     </div>
+        
 
 
 
@@ -172,14 +189,13 @@
 
 
 
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-    <script type="text/javascript" src="asset/js/main.js"></script>
-</body>
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+                crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+                crossorigin="anonymous"></script>
+            <script type="text/javascript" src="asset/js/main.js"></script>
+        </body>
 
 </html>
