--- a/homme.html
+++ b/homme.html
@@ -127,7 +127,7 @@
                 <h5 class="card-title font-weight-bold text-center">TEE SHIRT HOSSEGOR</h5>
                 <p class="card-text"><small>Le nouveau Tee-shirt Hossegor. La Capitale du Surf.</small></p>
                 <p class="card-text font-weight-bold">25,00€</p>
-                <a href="#"><button type="button" class="btn_article">Détails</button></a>
+                <a href="product.html"><button type="button" class="btn_article">Détails</button></a>
                 <div class=" text-center border_titre_tailles">Tailles
                     <div class="row">
                         <ul class="list-unstyled list-inline border_tailles">
