--- a/product.html
+++ b/product.html
@@ -5,17 +5,178 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
         <link rel="stylesheet" href="asset/css/style.css">
+        <link rel="stylesheet" href="asset/css/stylehomme.css">
+        <link rel="stylesheet" href="asset/css/styleproduct.css">
     <title>Projet Ecommerce | L'AfpaFouille</title>
 </head>
 
 <body>
+    <nav class="navbar ">
+        <a class="navbar-brand" href="#">
+            <img src="asset/img/afpa_logo.png" width="250" height="60" class="d-inline-block align-top" alt="">
+        </a>
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link active" data-toggle="modal" data-target="#exampleModalCenter">LOGIN</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">PANIER</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">CONTACT</a>
+            </li>
+        </ul>
+    </nav>
 
+    <!-- Début Modal -->
 
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle"><strong>Authentification</strong></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Email</label>
+                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                                placeholder="Entrer votre email">
+                            <small id="emailHelp" class="form-text text-muted"><i>Cet email est l'identifiant pour
+                                    accéder à votre compte</i></small>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Mot de passe</label>
+                            <input type="password" class="form-control" id="mdp" placeholder="Entrer votre mot de passe">
+                            <a href="#"><small id="pertemdp" class="form-text text-muted"><i>Mot de passe oublié ?</i></small></a>
+                        </div>
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" id="souv">
+                            <label class="form-check-label" for="exampleCheck1">Se souvenir de moi</label>
+
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-primary" onclick="ouvins()">Première connexion ?</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+                    <button type="button" class="btn btn-primary" id="modal">Envoyer</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- -------------------CARROUSSEL-------------------------------------- -->
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="asset/img/slide1.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="asset/img/slide1.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="asset/img/slide1.jpg" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <!-- ----------------------barre de livraison-------------------------------- -->
+    <div class="livraison">
+
+        <h4>FRAIS DE LIVRAISON OFFERT DES 75€ D'ACHAT</h4>
+
+    </div>
+    <!-- ---------------------BARRE SOUS MENUE HOMMES FEMMES .....---------- -->
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-1" style="margin-left:4.16%">
+
+                </div>
+                <div class="col-md-3 col-sm-3 p-0">
+                    <div class="categorie">
+                        <a href="homme.html">HOMMES</a>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-3 p-0">
+                    <div class="categorie">
+                        <a href="homme.html">FEMMES</a>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-3 p-0">
+                    <div class="categorie">
+                        <a href="homme.html">ENFANTS</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<div class="container" id="article">
+  <div class="row">
+    <div class="col-sm-4 col-sm-4 my-5 text-center">
+        <h5>TEE SHIRT HOSSEGOR</h5>
+        <h1 class="font-weight-bold">30,00€</h1>
+        <p><small>Le nouveau<span class="font-weight-bold"> Tee-shirt Hossegor.</span></small></p>
+        <p><large class="font-weight-bold">Hossegor</large>, la Capitale du Surf.</small></p>
+        <p><small>Col rond - 100% coton.</small></p>
+        <p><small>REFERENCE : AFPA_FOUILLE_12564_HOSSEGOR_NOIR </small></p>
+    </div> 
+    <div class="col-sm-4 col-sm-4 my-5">
+     <img src="asset/src/tee-shirt.png" at="tee-shirt" width="80%">
+      
+    </div> 
+    <div class="col-sm-4 col-sm-4 my-5">
+        <h6 class="font-italic">Sélectionnez une taille</h6>
+        <SELECT name="taille" size="1">
+            <option>X-SMALL</option>
+            <option>SMALL</option>
+            <option>MEDIUM</option>
+            <option>LARGE</option>
+            <option>X-LARGE</option>
+            <option>XX-LARGE</option>
+        </SELECT>
+        <h6 class="font-italic">Sélectionnez une couleur</h6>
+         <div class="row">
+                    <ul class="list-unstyled list-inline p-2 m-2">
+                        <li class="list-inline-item couleurrouge"></li> 
+                        <li class="list-inline-item couleurvert"></li>
+                        <li class="list-inline-item couleurjaune"></li> 
+                        <li class="list-inline-item couleurnoir"></li>
+                    </ul>
+                    </div>
+                    <div class="row">
+                     <ul class="list-unstyled list-inline p-2 m-2">
+                        <li class="list-inline-item couleurorange"></li> 
+                        <li class="list-inline-item couleurbleu"></li>
+                        <li class="list-inline-item couleurviolet"></li> 
+                        <li class="list-inline-item couleurblanc"></li>
+                    </ul>
+                </div>
+    </div> 
+  </div>  
+</div>
 
 
 
