--- a/product.html
+++ b/product.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">    
         <link rel="stylesheet" href="asset/css/style.css">
         <link rel="stylesheet" href="asset/css/stylehomme.css">
         <link rel="stylesheet" href="asset/css/styleproduct.css">
@@ -133,6 +134,7 @@
             </div>
         </div>
     </div>
+  <!-- ---------------------DETAIL ARTICLE .....---------- -->  
 <div class="container" id="article">
   <div class="row">
     <div class="col-sm-4 col-sm-4 my-5 text-center">
@@ -141,7 +143,10 @@
         <p><small>Le nouveau<span class="font-weight-bold"> Tee-shirt Hossegor.</span></small></p>
         <p><large class="font-weight-bold">Hossegor</large>, la Capitale du Surf.</small></p>
         <p><small>Col rond - 100% coton.</small></p>
-        <p><small>REFERENCE : AFPA_FOUILLE_12564_HOSSEGOR_NOIR </small></p>
+        <p class="mb-5"><small>REFERENCE : AFPA_FOUILLE_12564_HOSSEGOR_NOIR </small></p>
+        <button type="button" class="btn btn-primary" id="modal"><i class="fa fa-shopping-bag" aria-hidden="true"></i> Ajouter au panier</button>   
+        <button type="button" class="btn btn-secondary" id="modal"><i class="fa fa-map-marker" aria-hidden="true"></i> Trouver en boutique</button>
+        
     </div> 
     <div class="col-sm-4 col-sm-4 my-5">
      <img src="asset/src/tee-shirt.png" at="tee-shirt" width="80%">
@@ -149,7 +154,7 @@
     </div> 
     <div class="col-sm-4 col-sm-4 my-5">
         <h6 class="font-italic">Sélectionnez une taille</h6>
-        <SELECT name="taille" size="1">
+        <SELECT name="taille" size="1" class="custom-select custom-select-md mb-5">
             <option>X-SMALL</option>
             <option>SMALL</option>
             <option>MEDIUM</option>
@@ -159,21 +164,26 @@
         </SELECT>
         <h6 class="font-italic">Sélectionnez une couleur</h6>
          <div class="row">
-                    <ul class="list-unstyled list-inline p-2 m-2">
-                        <li class="list-inline-item couleurrouge"></li> 
-                        <li class="list-inline-item couleurvert"></li>
-                        <li class="list-inline-item couleurjaune"></li> 
-                        <li class="list-inline-item couleurnoir"></li>
-                    </ul>
-                    </div>
-                    <div class="row">
-                     <ul class="list-unstyled list-inline p-2 m-2">
-                        <li class="list-inline-item couleurorange"></li> 
-                        <li class="list-inline-item couleurbleu"></li>
-                        <li class="list-inline-item couleurviolet"></li> 
-                        <li class="list-inline-item couleurblanc"></li>
-                    </ul>
-                </div>
+             <ul class="list-unstyled list-inline p-2 m-2">
+                <li class="list-inline-item couleurrouge"></li> 
+                <li class="list-inline-item couleurvert"></li>
+                <li class="list-inline-item couleurjaune"></li> 
+                <li class="list-inline-item couleurnoir"></li>
+             </ul>
+         </div>
+         <div class="row mb-5">
+            <ul class="list-unstyled list-inline p-2 m-2">
+                <li class="list-inline-item couleurorange"></li> 
+                <li class="list-inline-item couleurbleu"></li>
+                <li class="list-inline-item couleurviolet"></li> 
+                <li class="list-inline-item couleurblanc"></li>
+            </ul>
+         </div>
+            <p>Ajouter à la liste de mes envies <i class="fa fa-heart-o" aria-hidden="true"></i></p>
+        <div class="row">   
+            <p class="mx-3"><i class="fa fa-envelope-o" aria-hidden="true"></i> Envoyer à un ami</p>
+            <p><img src="asset/src/like.jpg"></p>
+        </div>    
     </div> 
   </div>  
 </div>
