--- a/index.html
+++ b/index.html
@@ -1,4 +1,36 @@
+<!DOCTYPE html>
+<html lang="fr">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+        <link rel="stylesheet" href="asset/css/stylehomme.css">
+       <!-- <link rel="stylesheet" href="asset/css/style.css"> -->
+    <title>Projet Ecommerce | L'AfpaFouille</title>
+</head>
+
+<body>
+     <!-- ------------------------NAVBAR-------------------------------- -->
+    <nav class="navbar ">
+        <a class="navbar-brand" href="#">
+            <img src="asset/img/afpa_logo.png" width="250" height="60" class="d-inline-block align-top" alt="">
+        </a>
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">LOGIN</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">PANIER</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">CONTACT</a>
+            </li>
+        </ul>
+</nav>
 
     <!-- -------------------CARROUSSEL-------------------------------------- -->
 
